# django-practice

./: .gitignore  README.md  pyproject.toml
boards/: models.py  serializers.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_remove_attachment_post_id_remove_boardtag_board_id_and_more.py  0003_alter_like_post_id_delete_attachment_delete_boardtag_and_more.py  0004_tag_boardtag.py  0005_delete_like.py  0006_board_updated_at.py  0007_delete_boardtag_delete_tag.py
comments/: models.py  urls.py  views.py
comments/migrations/: 0001_initial.py
config/: secret.py  settings.py  urls.py
medias/: models.py  urls.py  views.py
medias/migrations/: 0001_initial.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_like.py  0003_comment.py  0004_post_created_at.py  0005_comment_updated_at_post_updated_at.py  0006_alter_comment_created_at_alter_comment_updated_at_and_more.py  0007_hashtag_alter_comment_post_id_alter_comment_user_id_and_more.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: auth.py
